# fsr/examples/wave_react_ts/app/routes/slots/contacts/page.loader.ts
@@ -1,0 +1,6 @@
+import type { Ctx } from "@snapfire/fsr";
+
+export async function load({ services }: Ctx) {
+  const people = await services.waves.listPeople();
+  return { people };
+}
